--- a/_sass/moving.scss
+++ b/_sass/moving.scss
@@ -41,4 +41,4 @@ $on-large: $on-laptop !default;
 }
 
 // Import partials.
-@import "moving/base", "moving/layout", "moving/svg";
+@import "moving/base", "moving/layout", "moving/base_custom", "moving/svg", "moving/encoder_decoder";
